--- a/health/app/src/main/res/values/colors.xml
+++ b/health/app/src/main/res/values/colors.xml
@@ -40,4 +40,12 @@
     <color name="chart_stress">#7B1FA2</color>
     <color name="chart_grid">#E0E0E0</color>
     <color name="chart_label">#757575</color>
+    
+    <!-- New colors from the code block -->
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="ic_launcher_background">#3DDC84</color>
 </resources> 
